<resources>
    <string name="app_name">LearnWorder</string>
    <string name="text_button_settings">Настройки</string>
    <string name="text_button_dictionary">Словарь</string>
    <string name="text_button_learn">Учить</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_translate">Enter translate</string>
    <string name="some_word">Some word</string>
    <string name="database_unavailable">Ошибка! База данных недоступна.</string>
    <string name="attention">Внимание!</string>
    <string name="OK">OK</string>
    <string name="not_learned">Не выучено</string>
    <string name="learned">Выучено</string>
    <string name="pick_action">Выберите действие</string>
    <string name="edit_word">Изменить слово</string>
    <string name="cancel">Отмена</string>
    <string name="incorrect_input">Неправильный ввод</string>
    <string name="done">Добавлено!</string>
    <string name="enterWord">Слово</string>
    <string name="enterTranslate">Перевод</string>
    <string name="enter_word">Enter word</string>
    <string name="Dictionary">Словарь</string>
    <string name="learn_words">Учить слова</string>
    <string name="add_word">Добавить слово</string>
</resources>
